bdr.BDR.scala.error
Erreur de compilation :
BDR:2: error: object java.lang.Void is not a value
while (message != Void){
                  ^